# codex-lb-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
migrations/: 202605050001_initial.sql  202607210001_local_pool_metrics.sql  202607220001_runtime_cooldown_reason.sql  202607220002_api_cost_estimates.sql  202607220003_request_selection_reason.sql  202607230001_session_route_actions.sql
packaging/systemd/: codex-lb-rs.service
scripts/: install-user-service.sh
src/: auth_file.rs  cli.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  pricing.rs  proxy.rs  scheduler.rs  session_registry.rs  state.rs  status.rs  upstream.rs  usage.rs  websocket.rs
src/admin/: mod.rs
tests/: postgres_proxy.rs  sqlite_proxy.rs
