[package]
name = "codex-lb-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "signal", "fs", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
